files/stylesheets/music.css
/* ---------------------------- music stylesheet ---------------------------- */
/* -------------- colors -------------- */

:root {
	/* ----- purples ----- */
	--dark: #2301a9;
	--mediumdark: #3810d1;
	--medium: #9985e8;
	--mediumlight: #b6a8ef;
	--light: #d6cef6;
	/* ----- grayscale ----- */
	--black: #171717;
	--white: #ffffff;
}

/* -------------- page -------------- */
html {
	background-image: url(/assets/images/backgrounds/grid.png);
	animation: background 12s infinite linear; /* sometimes i comment this bc the moving background kills my laptop live preview. if ur snoopin in the code and see this off, remind me 2 turn it back on lol */
}

/* -------------- grid -------------- */
.grid-container {
	display: grid;
	grid-template-areas:
		"nav stuff stuff stuff stuff"
		"nav stuff stuff stuff stuff"
		"footer footer footer footer footer";
	width: 1200px;
	position: relative;
	margin-left: auto;
	margin-right: auto;
}

.grid-container > div {
	background-color: var(--black);
	border: 2px var(--white) solid;
	box-shadow: 10px 10px 25px var(--black);
	padding: 25px;
	margin: 5px;
}

.g1 {
	grid-area: nav;
	width: 130px;
}

.g2 {
	grid-area: stuff;
	height: 600px;
	overflow-y: scroll;
}

.g3 {
	grid-area: footer;
	text-align: center;
}

.box {
	display: flex;
}

/* -------------- animation -------------- */
@keyframes background {
	0% {
		background-position: 0px 0px;
	}
	100% {
		background-position: 307px 133px;
	}
}

